--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,125 @@
-attrs==23.2.0
-Automat==22.10.0
-Babel==2.10.3
-bcrypt==3.2.2
-blinker==1.7.0
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.4.1
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-constantly==23.10.4
-cryptography==41.0.7
-dbus-python==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+azure-ai-textanalytics==5.3.0
+azure-common==1.1.28
+azure-core==1.32.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+blis==1.2.0
+cachetools==5.5.2
+catalogue==2.0.10
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.21.0
+confection==0.1.5
+contourpy==1.3.1
+cryptography==44.0.2
+cycler==0.12.1
+cymem==2.0.11
+Cython==3.0.12
 distro==1.9.0
-distro-info==1.7+build1
-httplib2==0.20.4
-hyperlink==21.0.0
-idna==3.6
-incremental==22.10.0
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
+es_core_news_md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl#sha256=478b8bb3f3e8eb149192f7d80e7cd64f990b7e9bccbc5329df41a57e86326be2
+es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+fonttools==4.57.0
+fpdf==1.7.2
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-genai==1.8.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.69.2
+greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+imageio==2.37.0
+isodate==0.7.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.4
+marisa-trie==1.2.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
+matplotlib==3.10.1
 mdurl==0.1.2
-netifaces==0.11.0
-oauthlib==3.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycurl==7.45.3
-Pygments==2.17.2
-PyGObject==3.48.2
-PyHamcrest==2.1.0
-PyJWT==2.7.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu4
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-service-identity==24.1.0
-setuptools==68.1.2
-six==1.16.0
-systemd-python==235
-Twisted==24.3.0
-typing_extensions==4.10.0
-ubuntu-pro-client==8001
-unattended-upgrades==0.1
-urllib3==2.0.7
-wadllib==1.3.6
-wheel==0.42.0
-zope.interface==6.1
+murmurhash==1.0.12
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.4
+openai==1.68.0
+packaging==24.2
+pandas==2.2.3
+PassportEye==2.2.2
+pdfminer==20191125
+pdfminer.six==20231228
+pdfplumber==0.11.5
+pillow==11.1.0
+preshed==3.0.9
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pycryptodome==3.22.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyMRZ==0.1
+PyMuPDF==1.25.4
+pyparsing==3.2.3
+pypdf==5.4.0
+pypdfium2==4.30.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+pytz==2025.1
+qrcode==8.1
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rsa==4.9
+scikit-image==0.25.2
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==77.0.3
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+sounddevice==0.5.1
+soupsieve==2.6
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.40
+srsly==2.5.1
+thinc==8.3.4
+threadpoolctl==3.6.0
+tifffile==2025.3.30
+tqdm==4.67.1
+typer==0.15.2
+typing_extensions==4.12.2
+tzdata==2025.1
+Unidecode==1.3.8
+uritemplate==4.1.1
+urllib3==2.3.0
+wasabi==1.1.3
+weasel==0.4.1
+websockets==15.0.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
