--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ azure-core==1.32.0
 beautifulsoup4==4.13.3
 blinker==1.9.0
 blis==1.2.0
+cached-property==2.0.1
 cachetools==5.5.2
 catalogue==2.0.10
 certifi==2025.1.31
@@ -22,9 +23,12 @@ cryptography==44.0.2
 cycler==0.12.1
 cymem==2.0.11
 Cython==3.0.12
+defusedxml==0.7.1
 distro==1.9.0
+dnspython==2.7.0
 es_core_news_md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl#sha256=478b8bb3f3e8eb149192f7d80e7cd64f990b7e9bccbc5329df41a57e86326be2
 es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
+exchangelib==5.5.1
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 fonttools==4.57.0
@@ -55,6 +59,7 @@ kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
 lazy_loader==0.4
+lxml==5.3.2
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -67,6 +72,7 @@ nltk==3.9.1
 numpy==2.2.4
 oauthlib==3.2.2
 openai==1.68.0
+opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 PassportEye==2.2.2
@@ -89,6 +95,7 @@ PyMuPDF==1.25.4
 pyparsing==3.2.3
 pypdf==5.4.0
 pypdfium2==4.30.1
+pyspnego==0.11.2
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 pytz==2025.1
@@ -96,6 +103,7 @@ qrcode==8.1
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
+requests_ntlm==1.3.0
 rich==13.9.4
 rsa==4.9
 scikit-image==0.25.2
@@ -120,6 +128,7 @@ tqdm==4.67.1
 typer==0.15.2
 typing_extensions==4.12.2
 tzdata==2025.1
+tzlocal==5.3.1
 Unidecode==1.3.8
 uritemplate==4.1.1
 urllib3==2.3.0
